changing openid url

--- a/gcmrc-labs/src/main/webapp/WEB-INF/web.xml
+++ b/gcmrc-labs/src/main/webapp/WEB-INF/web.xml
@@ -61,12 +61,12 @@
 		<servlet-class>gov.usgs.cida.proxy.AlternateProxyServlet</servlet-class>
 		<init-param>
 			<param-name>forward-url</param-name>
-			<param-value>https://www.google.com/accounts/o8/id</param-value>
+			<param-value>https://www.google.com/accounts/o8/</param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>GoToOpenIdServlet</servlet-name>
-		<url-pattern>/openid</url-pattern>
+		<url-pattern>/openid/*</url-pattern>
 	</servlet-mapping>
 	
 	
