--- a/pom.xml
+++ b/pom.xml
@@ -326,7 +326,7 @@
 							<webResource>
 								<directory>${war.dir}</directory>
 								<includes>
-									<include>*.jsp</include>
+									<include>**/*.jsp</include>
 								</includes>
 								<filtering>true</filtering>
 							</webResource>
