--- a/gcmrc-services/src/main/webapp/WEB-INF/web.xml
+++ b/gcmrc-services/src/main/webapp/WEB-INF/web.xml
@@ -117,6 +117,46 @@
         <servlet-name>LookupService</servlet-name>
         <url-pattern>/service/lookup/*</url-pattern>
     </servlet-mapping>
+	<servlet>
+        <servlet-name>ParamService</servlet-name>
+        <servlet-class>gov.usgs.cida.gcmrcservices.jsl.param.ParamService</servlet-class>
+        <init-param>
+            <param-name>jndi_name</param-name>
+            <param-value>java:comp/env/jdbc/gcmrcDS</param-value>
+        </init-param>
+        <init-param>
+            <param-name>delimited_value_file_name</param-name>
+            <param-value>gcmrc</param-value>
+        </init-param>
+        <init-param>
+            <param-name>enable_caching</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ParamService</servlet-name>
+        <url-pattern>/service/param/*</url-pattern>
+    </servlet-mapping>
+	<servlet>
+        <servlet-name>DownloadService</servlet-name>
+        <servlet-class>gov.usgs.cida.gcmrcservices.jsl.data.DownloadService</servlet-class>
+        <init-param>
+            <param-name>jndi_name</param-name>
+            <param-value>java:comp/env/jdbc/gcmrcDS</param-value>
+        </init-param>
+        <init-param>
+            <param-name>delimited_value_file_name</param-name>
+            <param-value>gcmrc</param-value>
+        </init-param>
+        <init-param>
+            <param-name>enable_caching</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DownloadService</servlet-name>
+        <url-pattern>/service/download/*</url-pattern>
+    </servlet-mapping>
     <servlet>
         <servlet-name>AggregatingEndpoint</servlet-name>
         <servlet-class>gov.usgs.cida.gcmrcservices.nude.AggregatingEndpoint</servlet-class>
