removing cache for reach service

--- a/gcmrc-services/src/main/webapp/WEB-INF/web.xml
+++ b/gcmrc-services/src/main/webapp/WEB-INF/web.xml
@@ -66,19 +66,7 @@
         </init-param>
         <init-param>
             <param-name>enable_caching</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
-            <param-name>cache_keep_alive_in_minutes</param-name>
-            <param-value>30</param-value>
-        </init-param>
-        <init-param>
-            <param-name>max_cache_count</param-name>
-            <param-value>100</param-value>
-        </init-param>
-        <init-param>
-            <param-name>max_cache_resp_size_in_chars</param-name>
-            <param-value>20000</param-value>
+            <param-value>false</param-value>
         </init-param>
     </servlet>
     <servlet-mapping>
