--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 	</properties>
 	
 	<scm>
-		<developerConnection>scm:svn:https://cida-svn.er.usgs.gov/repos/dev/usgs/gcmrc/gcmrc-ui-parent/trunk</developerConnection>
+		<developerConnection>scm:git:ssh://git@cida-eros-stash.er.usgs.gov:7999/gcmrc/gcmrc-ui-parent.git</developerConnection>
 	</scm>
 	
 	<distributionManagement>
