adding jersey/mybatis stack

--- a/gcmrc-services/src/main/webapp/WEB-INF/web.xml
+++ b/gcmrc-services/src/main/webapp/WEB-INF/web.xml
@@ -121,6 +121,21 @@
         <servlet-name>AggregatingEndpoint</servlet-name>
         <url-pattern>/agg/*</url-pattern>
     </servlet-mapping>
+	
+	<servlet>
+        <servlet-name>Jersey Web Application</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>javax.ws.rs.Application</param-name>
+            <param-value>gov.usgs.cida.gcmrcservices.mb.endpoint.WebAppBase</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Jersey Web Application</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
+	
     <session-config>
         <session-timeout>
 			30
