--- a/gcmrc-services/pom.xml
+++ b/gcmrc-services/pom.xml
@@ -14,6 +14,18 @@
 	<name>GCMRC Services</name>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+		</dependency>
 		<!-- Normal Servlet dependencies -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
