--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,9 @@
 			<url>http://www.usgs.gov/visual-id/credit_usgs.html#copyright</url>
 			<comments>
 				This software is in the public domain because it contains materials
-                that originally came from the United States Geological Survey, an agency of
-                the United States Department of Interior. For more information, see the official
-                USGS copyright policy at http://www.usgs.gov/visual-id/credit_usgs.html#copyright
+				that originally came from the United States Geological Survey, an agency of
+				the United States Department of Interior. For more information, see the official
+				USGS copyright policy at http://www.usgs.gov/visual-id/credit_usgs.html#copyright
 			</comments>
 		</license>
 	</licenses>
@@ -206,6 +206,23 @@
 				<type>jar</type>
 				<version>1.0.5</version>
 			</dependency>
+			<dependency>
+				<groupId>org.mybatis</groupId>
+				<artifactId>mybatis</artifactId>
+				<version>3.2.5</version>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.jersey</groupId>
+				<artifactId>jersey-bom</artifactId>
+				<version>2.7</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>javax.ws.rs</groupId>
+				<artifactId>javax.ws.rs-api</artifactId>
+				<version>2.0</version>
+			</dependency>
 			<!-- LOGGING -->
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
@@ -291,8 +308,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.5.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
@@ -314,7 +331,7 @@
 					<configuration>
 						<archive>
 							<manifestEntries>
-							<!-- The following are non-standard manifest entries. Tag names have been styled according to Manifest conventions -->
+								<!-- The following are non-standard manifest entries. Tag names have been styled according to Manifest conventions -->
 								<BuildTime>${maven.build.timestamp}</BuildTime>
 								<Project-GroupId>${project.groupId}</Project-GroupId>
 								<Project-ArtifactId>${project.artifactId}</Project-ArtifactId>
