apply ignore settings for eclipse

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 /gcmrc-photos/src/main/webapp/META-INF/
 /gcmrc-photos/target/
 /gcmrc-ui/nb-configuration.xml
+**/.settings 
+**/.project
+**/.classpath
