GCMON-180 applying a few small changes to go through the process

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 /gcmrc-photos/src/main/webapp/META-INF/
 /gcmrc-photos/target/
 /gcmrc-ui/nb-configuration.xml
+.settings/
+.project
+.classpath
 **/.settings 
 **/.project
 **/.classpath
