--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gov.usgs.cida.gcmrc</groupId>
 	<artifactId>gcmrc-parent</artifactId>
-	<version>1.1.19-SNAPSHOT</version>
+	<version>1.1.19-1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>GCMRC Parent</name>
 	
@@ -96,7 +96,7 @@
 	</properties>
 	
 	<scm>
-		<developerConnection>scm:git:ssh://git@cida-eros-stash.er.usgs.gov:7999/gcmrc/gcmrc-ui-parent.git</developerConnection>
+		<developerConnection>scm:git:ssh://git@github.com:USGS-CIDA/gcmrc-ui-parent.git</developerConnection>
 	</scm>
 	
 	<distributionManagement>
