--- a/gcmrc-labs/pom.xml
+++ b/gcmrc-labs/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>gcmrc-parent</artifactId>
 		<groupId>gov.usgs.cida.gcmrc</groupId>
-		<version>1.1.19-4-SNAPSHOT</version>
+		<version>1.1.19-4</version>
 	</parent>
 
 	<groupId>gov.usgs.cida.gcmrc</groupId>
