--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<war.dir>src/main/webapp</war.dir>
+		<java.version>1.8</java.version>
 	</properties>
 	
 	<scm>
@@ -176,7 +177,7 @@
 			<dependency>
 				<groupId>gov.usgs.cida</groupId>
 				<artifactId>jdbc-spec-library</artifactId>
-				<version>0.5.12</version>
+				<version>0.5.13-SNAPSHOT</version>
 				<exclusions>
 					<exclusion>
 						<artifactId>log4j</artifactId>
@@ -308,8 +309,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.5.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.version>}</source>
+					<target>${java.version>}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
