--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -17,23 +17,11 @@
 			<artifactId>proxy-utils</artifactId>
 			<groupId>gov.usgs.cida</groupId>
 		</dependency>
-<!--		<dependency>
-			<groupId>gov.usgs.cida.imageproxy</groupId>
-			<artifactId>imageproxy</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-			<scope>compile</scope>
-		</dependency>-->
-<!--		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-		</dependency>
 		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.1</version>
-		</dependency>-->
-		<!-- LOGGING -->
+			<!-- Required by proxy-utils -> httpclient -->
+			<artifactId>commons-logging</artifactId>
+			<groupId>commons-logging</groupId>
+		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
