Added small comment back

--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -17,6 +17,7 @@
 			<artifactId>proxy-utils</artifactId>
 			<groupId>gov.usgs.cida</groupId>
 		</dependency>
+		<!-- LOGGING -->
 		<dependency>
 			<!-- Required by proxy-utils -> httpclient -->
 			<artifactId>commons-logging</artifactId>
