--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -46,9 +46,14 @@
 		</dependency>
 		<!-- JS Templates -->
 		<dependency>
-			<groupId>gov.usgs.cida.jslibs</groupId>
+			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
-			<type>war</type>
+			<version>2.2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery-ui</artifactId>
+			<version>1.11.4</version>
 		</dependency>
 		<dependency>
 			<groupId>gov.usgs.cida.jslibs</groupId>
