--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -46,14 +46,9 @@
 		</dependency>
 		<!-- JS Templates -->
 		<dependency>
-			<groupId>org.webjars</groupId>
+			<groupId>gov.usgs.cida.jslibs</groupId>
 			<artifactId>jquery</artifactId>
-			<version>2.2.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>jquery-ui</artifactId>
-			<version>1.11.4</version>
+			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>gov.usgs.cida.jslibs</groupId>
