--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gov.usgs.cida.gcmrc</groupId>
 	<artifactId>gcmrc-parent</artifactId>
-	<version>1.1.43-SNAPSHOT</version>
+	<version>1.1.43</version>
 	<packaging>pom</packaging>
 	<name>GCMRC Parent</name>
 	
