--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<name>GCMRC Parent</name>
 	
 	<modules>
-		<module>gcmrc-labs</module>
+		<module>gcmrc-ui</module>
 		<module>gcmrc-services</module>
 	</modules>
 	
