--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gov.usgs.cida.gcmrc</groupId>
 	<artifactId>gcmrc-parent</artifactId>
-	<version>1.1.69-SNAPSHOT</version>
+	<version>1.1.69</version>
 	<packaging>pom</packaging>
 	<name>GCMRC Parent</name>
 	
@@ -97,7 +97,8 @@
 	
 	<scm>
 		<developerConnection>scm:git:ssh://git@github.com/USGS-CIDA/gcmrc-ui-parent.git</developerConnection>
-	</scm>
+	  <tag>gcmrc-parent-1.1.69</tag>
+  </scm>
 	
 	<distributionManagement>
 		<repository>
