--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,7 @@
 			<dependency>
 				<groupId>gov.usgs.cida.nude</groupId>
 				<artifactId>nude</artifactId>
-				<version>1.1.10</version>
+				<version>1.1.11-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
