--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -45,19 +45,16 @@
 		</dependency>
 		<!-- JS Templates -->
 		<dependency>
-			<groupId>gov.usgs.cida.jslibs</groupId>
-			<artifactId>jquery</artifactId>
-			<type>war</type>
-		</dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>jquery</artifactId>
+                </dependency>
 		<dependency>
-			<groupId>gov.usgs.cida.jslibs</groupId>
-			<artifactId>log4js</artifactId>
-			<type>war</type>
-		</dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>log4javascript</artifactId>
+                </dependency>
 		<dependency>
-			<groupId>gov.usgs.cida.jslibs</groupId>
+			<groupId>org.webjars</groupId>
 			<artifactId>openlayers</artifactId>
-			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>gov.usgs.cida.jslibs</groupId>
@@ -78,6 +75,15 @@
 
 	<build>
 		<finalName>${project.artifactId}</finalName>
+                <!-- This updates the application.properties file in src/main/resources
+                     and updates it with the version used in webjars which then gets
+                     picked up in JSPs to load the webjars version of js apps -->
+                <resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
