--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<war.dir>src/main/webapp</war.dir>
 		<java.version>1.8</java.version>
+                <version.jquery>1.7.2</version.jquery>
+                <version.log4javascript>1.4.13</version.log4javascript>
+                <version.openlayers>2.13</version.openlayers>
 	</properties>
 	
 	<scm>
@@ -265,23 +268,31 @@
 			</dependency>
 			<!-- JS Templates -->
 			<dependency>
-				<groupId>gov.usgs.cida.jslibs</groupId>
-				<artifactId>jquery</artifactId>
-				<version>1.7.1-3</version>
-				<type>war</type>
-			</dependency>
+                                <groupId>org.webjars</groupId>
+                                <artifactId>jquery</artifactId>
+                                <version>${version.jquery}</version>
+                        </dependency>
 			<dependency>
-				<groupId>gov.usgs.cida.jslibs</groupId>
-				<artifactId>log4js</artifactId>
-				<version>1.4.3-1</version>
-				<type>war</type>
-			</dependency>
+                                <groupId>org.webjars</groupId>
+                                <artifactId>log4javascript</artifactId>
+                                <version>${version.log4javascript}-1</version>
+                                <!-- 
+                                Adding the '-1' here is required because inside
+                                the webjar, the versioned folder does not contain
+                                the '-1' so everywhere besides on this line we
+                                want ${version.log4javascript} to not have a '-1'
+                                in it. This is only if using 1.4.13-1 version.
+                                I don't think this needs to happen for any other
+                                version webjars has for this lib and it is probably
+                                a mistake on the part of webjars
+                                -->
+                                
+                        </dependency>
 			<dependency>
-				<groupId>gov.usgs.cida.jslibs</groupId>
-				<artifactId>openlayers</artifactId>
-				<version>2.12-4</version>
-				<type>war</type>
-			</dependency>
+                                <groupId>org.webjars</groupId>
+                                <artifactId>openlayers</artifactId>
+                                <version>${version.openlayers}</version>
+                        </dependency>
 			<dependency>
 				<groupId>gov.usgs.cida.jslibs</groupId>
 				<artifactId>openlayers-decluster</artifactId>
