--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -53,6 +53,10 @@
                         <artifactId>log4javascript</artifactId>
                 </dependency>
 		<dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>modernizr</artifactId>
+                </dependency>
+		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>openlayers</artifactId>
 		</dependency>
