--- a/gcmrc-ui/src/main/resources/application.properties
+++ b/gcmrc-ui/src/main/resources/application.properties
@@ -2,3 +2,4 @@ version.jquery=${version.jquery}
 version.log4javascript=${version.log4javascript}
 version.openlayers=${version.openlayers}
 version.modernizr=${version.modernizr}
+version.bootstrap=${version.bootstrap}
