--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
                 <version.log4javascript>1.4.13</version.log4javascript>
                 <version.openlayers>2.13</version.openlayers>
                 <version.modernizr>2.6.2</version.modernizr>
+                <version.bootstrap>2.2.1</version.bootstrap>
 	</properties>
 	
 	<scm>
@@ -319,12 +320,11 @@
 				<version>20130314-1</version>
 				<type>war</type>
 			</dependency>
-			<dependency>
-				<groupId>gov.usgs.cida.jslibs</groupId>
-				<artifactId>bootstrap-core</artifactId>
-				<version>2.2.1-1</version>
-				<type>war</type>
-			</dependency>
+                        <dependency>
+                            <groupId>org.webjars</groupId>
+                            <artifactId>bootstrap</artifactId>
+                            <version>${version.bootstrap}</version>
+                        </dependency>
 			<dependency>
 				<groupId>gov.usgs.cida.jslibs</groupId>
 				<artifactId>usgs-template</artifactId>
