Switched out embedded jquery-ui for webjars

--- a/gcmrc-ui/src/main/resources/application.properties
+++ b/gcmrc-ui/src/main/resources/application.properties
@@ -3,3 +3,4 @@ version.log4javascript=${version.log4javascript}
 version.openlayers=${version.openlayers}
 version.modernizr=${version.modernizr}
 version.bootstrap=${version.bootstrap}
+version.jqueryui=${version.jqueryui}
