--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -48,6 +48,10 @@
                         <groupId>org.webjars</groupId>
                         <artifactId>jquery</artifactId>
                 </dependency>
+                <dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>jquery-ui</artifactId>
+                </dependency>
 		<dependency>
                         <groupId>org.webjars</groupId>
                         <artifactId>log4javascript</artifactId>
