Switched SugarJS to webjars version

--- a/gcmrc-ui/src/main/resources/application.properties
+++ b/gcmrc-ui/src/main/resources/application.properties
@@ -4,3 +4,4 @@ version.openlayers=${version.openlayers}
 version.modernizr=${version.modernizr}
 version.bootstrap=${version.bootstrap}
 version.jqueryui=${version.jqueryui}
+version.sugarjs=${version.sugarjs}
