--- a/gcmrc-ui/src/main/resources/application.properties
+++ b/gcmrc-ui/src/main/resources/application.properties
@@ -5,3 +5,4 @@ version.modernizr=${version.modernizr}
 version.bootstrap=${version.bootstrap}
 version.jqueryui=${version.jqueryui}
 version.sugarjs=${version.sugarjs}
+version.closure=${version.closure}
