Switched angular, angular-sortable and angular-bootstrap to webjars

--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -81,6 +81,18 @@
                         <groupId>org.webjars</groupId>
                         <artifactId>closure-library</artifactId>
                 </dependency>
+                <dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>angularjs</artifactId>
+                </dependency>
+                <dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>angular-ui-sortable</artifactId>
+                </dependency>
+                <dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>angular-ui-bootstrap</artifactId>
+                </dependency>
 		<dependency>
 			<groupId>gov.usgs.cida.jslibs</groupId>
 			<artifactId>dygraphs-core</artifactId>
