--- a/gcmrc-ui/src/main/resources/application.properties
+++ b/gcmrc-ui/src/main/resources/application.properties
@@ -6,3 +6,6 @@ version.bootstrap=${version.bootstrap}
 version.jqueryui=${version.jqueryui}
 version.sugarjs=${version.sugarjs}
 version.closure=${version.closure}
+version.angularjs=${version.angularjs}
+version.angular_ui_sortable=${version.angular_ui_sortable}
+version.angular_ui_bootstrap=${version.angular_ui_bootstrap}
