Switched bootstrap-datepicker to use webjars

--- a/gcmrc-ui/src/main/resources/application.properties
+++ b/gcmrc-ui/src/main/resources/application.properties
@@ -9,3 +9,4 @@ version.closure=${version.closure}
 version.angularjs=${version.angularjs}
 version.angular_ui_sortable=${version.angular_ui_sortable}
 version.angular_ui_bootstrap=${version.angular_ui_bootstrap}
+version.bootstrap_datepicker=${version.bootstrap_datepicker}
