--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -93,6 +93,10 @@
                         <groupId>org.webjars</groupId>
                         <artifactId>angular-ui-bootstrap</artifactId>
                 </dependency>
+                <dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>bootstrap-datepicker</artifactId>
+                </dependency>
 		<dependency>
 			<groupId>gov.usgs.cida.jslibs</groupId>
 			<artifactId>dygraphs-core</artifactId>
