Switched out proj4js embedded to webjars

--- a/gcmrc-ui/src/main/resources/application.properties
+++ b/gcmrc-ui/src/main/resources/application.properties
@@ -10,3 +10,4 @@ version.angularjs=${version.angularjs}
 version.angular_ui_sortable=${version.angular_ui_sortable}
 version.angular_ui_bootstrap=${version.angular_ui_bootstrap}
 version.bootstrap_datepicker=${version.bootstrap_datepicker}
+version.proj4js=${version.proj4js}
