Switched FontAwesome to WebJars

--- a/gcmrc-ui/src/main/resources/application.properties
+++ b/gcmrc-ui/src/main/resources/application.properties
@@ -11,3 +11,4 @@ version.angular_ui_sortable=${version.angular_ui_sortable}
 version.angular_ui_bootstrap=${version.angular_ui_bootstrap}
 version.bootstrap_datepicker=${version.bootstrap_datepicker}
 version.proj4js=${version.proj4js}
+version.fontawesome=${version.fontawesome}
