--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -101,6 +101,10 @@
                         <groupId>org.webjars</groupId>
                         <artifactId>proj4js</artifactId>
                 </dependency>
+                <dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>font-awesome</artifactId>
+                </dependency>
 		<dependency>
 			<groupId>gov.usgs.cida.jslibs</groupId>
 			<artifactId>dygraphs-core</artifactId>
