--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
                 <version.angular_ui_bootstrap>0.6.0</version.angular_ui_bootstrap>
                 <version.bootstrap_datepicker>1.9.0</version.bootstrap_datepicker>
                 <version.proj4js>2.2.1</version.proj4js>
+                <version.fontawesome>4.7.0</version.fontawesome>
 	</properties>
 	
 	<scm>
@@ -365,6 +366,11 @@
                                 <groupId>org.webjars</groupId>
                                 <artifactId>proj4js</artifactId>
                                 <version>${version.proj4js}-1</version>
+                        </dependency>
+                        <dependency>
+                                <groupId>org.webjars</groupId>
+                                <artifactId>font-awesome</artifactId>
+                                <version>${version.fontawesome}</version>
                         </dependency>
 			<dependency>
 				<groupId>gov.usgs.cida.jslibs</groupId>
