first attempt at removing dynamic readonly properties.

--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -118,6 +118,7 @@
 				<filtering>true</filtering>
 			</resource>
 		</resources>
+		<pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -176,5 +177,6 @@
                             </configuration>
                         </plugin>
 		</plugins>
+		</pluginManagement>
 	</build>
 </project>
