reimplement class from proxy-utils, updated libs.

--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,13 @@
 	</pluginRepositories>
 	
 	<dependencies>
+	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.9</version>
+		</dependency>
+	
 		<!-- LOGGING -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -193,25 +200,6 @@
 				<artifactId>nude</artifactId>
 				<version>1.1.10</version>
 				<scope>compile</scope>
-			</dependency>
-			<dependency>
-				<groupId>joda-time</groupId>
-				<artifactId>joda-time</artifactId>
-				<version>2.9.9</version>
-				<scope>compile</scope>
-			</dependency>
-			<dependency>
-				<groupId>gov.usgs.cida</groupId>
-				<artifactId>proxy-utils</artifactId>
-				<version>1.0.12</version>
-			</dependency>
-			<dependency>
-				<!-- Required by httpclient, which is used by proxy-utils.
-				Though required, it is excluded in proxy-utils pom, so must
-				be included when used in a project -->
-				<groupId>commons-logging</groupId>
-				<artifactId>commons-logging</artifactId>
-				<version>1.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mybatis</groupId>
