--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -13,20 +13,29 @@
 	
 	<dependencies>
 		<dependency>
-			<artifactId>proxy-utils</artifactId>
-			<groupId>gov.usgs.cida</groupId>
-		</dependency>
-		<!-- LOGGING -->
-		<dependency>
-			<!-- Required by proxy-utils -> httpclient -->
-			<artifactId>commons-logging</artifactId>
-			<groupId>commons-logging</groupId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.9</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.9</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+		
 		<!-- Normal Servlet dependencies -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
